@@ -57,6 +57,14 @@ import org.eclipse.jetty.util.ManifestUtils;
 public class StartArgs
 {
     public static final String VERSION;
+    public static final Set<String> ALL_PARTS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+        "java",
+        "opts",
+        "path",
+        "main",
+        "args")));
+    public static final Set<String> ARG_PARTS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+        "args")));
 
     static
     {
@@ -185,7 +193,7 @@ public class StartArgs
 
     // jetty.base - build out commands
     /**
-     * --add-to-start[d]=[module,[module]]
+     * --add-module=[module,[module]]
      */
     private List<String> startModules = new ArrayList<>();
 
@@ -215,12 +223,15 @@ public class StartArgs
     private boolean help = false;
     private boolean stopCommand = false;
     private List<String> listModules = null;
+    private List<String> showModules = null;
     private boolean listClasspath = false;
     private boolean listConfig = false;
     private boolean version = false;
     private boolean dryRun = false;
+    private final Set<String> dryRunParts = new HashSet<>();
     private boolean jpms = false;
-    private boolean createStartd = false;
+    private boolean createStartD = false;
+    private boolean createStartIni = false;
     private boolean updateIni = false;
     private String mavenBaseUri;
 
@@ -337,7 +348,6 @@ public class StartArgs
             System.out.println();
         }
 
-        // Jetty Se
         System.out.println();
     }
 
@@ -676,8 +686,11 @@ public class StartArgs
         return jvmArgs;
     }
 
-    public CommandLineBuilder getMainArgs(boolean addJavaInit) throws IOException
+    public CommandLineBuilder getMainArgs(Set<String> parts) throws IOException
     {
+        if (parts.isEmpty())
+            parts = ALL_PARTS;
+
         CommandLineBuilder cmd = new CommandLineBuilder();
 
         // Special Stop/Shutdown properties
@@ -685,10 +698,11 @@ public class StartArgs
         ensureSystemPropertySet("STOP.KEY");
         ensureSystemPropertySet("STOP.WAIT");
 
-        if (addJavaInit)
-        {
+        if (parts.contains("java"))
             cmd.addRawArg(CommandLineBuilder.findJavaBin());
 
+        if (parts.contains("opts"))
+        {
             cmd.addRawArg("-Djava.io.tmpdir=" + System.getProperty("java.io.tmpdir"));
             cmd.addRawArg("-Djetty.home=" + baseHome.getHome());
             cmd.addRawArg("-Djetty.base=" + baseHome.getBase());
@@ -716,7 +730,10 @@ public class StartArgs
                 String value = System.getProperty(propKey);
                 cmd.addEqualsArg("-D" + propKey, value);
             }
+        }
 
+        if (parts.contains("path"))
+        {
             if (isJPMS())
             {
                 Map<Boolean, List<File>> dirsAndFiles = StreamSupport.stream(classpath.spliterator(), false)
@@ -765,52 +782,58 @@ public class StartArgs
                     cmd.addRawArg("--add-reads");
                     cmd.addRawArg(entry.getKey() + "=" + String.join(",", entry.getValue()));
                 }
-
-                cmd.addRawArg("--module");
-                cmd.addRawArg(getMainClassname());
             }
             else
             {
                 cmd.addRawArg("-cp");
                 cmd.addRawArg(classpath.toString());
-                cmd.addRawArg(getMainClassname());
             }
+        }
+
+        if (parts.contains("main"))
+        {
+            if (isJPMS())
+                cmd.addRawArg("--module");
+            cmd.addRawArg(getMainClassname());
         }
 
         // pass properties as args or as a file
-        if (dryRun && execProperties == null)
+        if (parts.contains("args"))
         {
-            for (Prop p : properties)
+            if (dryRun && execProperties == null)
             {
-                cmd.addRawArg(CommandLineBuilder.quote(p.key) + "=" + CommandLineBuilder.quote(p.value));
+                for (Prop p : properties)
+                {
+                    cmd.addRawArg(CommandLineBuilder.quote(p.key) + "=" + CommandLineBuilder.quote(p.value));
+                }
             }
-        }
-        else if (properties.size() > 0)
-        {
-            Path propPath;
-            if (execProperties == null)
+            else if (properties.size() > 0)
             {
-                propPath = Files.createTempFile("start_", ".properties");
-                propPath.toFile().deleteOnExit();
-            }
-            else
-                propPath = new File(execProperties).toPath();
+                Path propPath;
+                if (execProperties == null)
+                {
+                    propPath = Files.createTempFile("start_", ".properties");
+                    propPath.toFile().deleteOnExit();
+                }
+                else
+                    propPath = new File(execProperties).toPath();
 
-            try (OutputStream out = Files.newOutputStream(propPath))
+                try (OutputStream out = Files.newOutputStream(propPath))
+                {
+                    properties.store(out, "start.jar properties");
+                }
+                cmd.addRawArg(propPath.toAbsolutePath().toString());
+            }
+
+            for (Path xml : xmls)
             {
-                properties.store(out, "start.jar properties");
+                cmd.addRawArg(xml.toAbsolutePath().toString());
             }
-            cmd.addRawArg(propPath.toAbsolutePath().toString());
-        }
 
-        for (Path xml : xmls)
-        {
-            cmd.addRawArg(xml.toAbsolutePath().toString());
-        }
-
-        for (Path propertyFile : propertyFiles)
-        {
-            cmd.addRawArg(propertyFile.toAbsolutePath().toString());
+            for (Path propertyFile : propertyFiles)
+            {
+                cmd.addRawArg(propertyFile.toAbsolutePath().toString());
+            }
         }
 
         return cmd;
@@ -936,6 +959,11 @@ public class StartArgs
         return dryRun;
     }
 
+    public Set<String> getDryRunParts()
+    {
+        return dryRunParts;
+    }
+
     public boolean isExec()
     {
         return exec;
@@ -971,6 +999,11 @@ public class StartArgs
         return listModules;
     }
 
+    public List<String> getShowModules()
+    {
+        return showModules;
+    }
+
     public boolean isRun()
     {
         return run;
@@ -991,9 +1024,14 @@ public class StartArgs
         return version;
     }
 
-    public boolean isCreateStartd()
+    public boolean isCreateStartD()
     {
-        return createStartd;
+        return createStartD;
+    }
+
+    public boolean isCreateStartIni()
+    {
+        return createStartIni;
     }
 
     public boolean isUpdateIni()
@@ -1154,6 +1192,21 @@ public class StartArgs
             return;
         }
 
+        if (arg.startsWith("--dry-run="))
+        {
+            int colon = arg.indexOf('=');
+            for (String part : arg.substring(colon + 1).split(","))
+            {
+                if (!ALL_PARTS.contains(part))
+                    throw new UsageException(UsageException.ERR_BAD_ARG, "Unrecognized --dry-run=\"%s\" in %s", part, source);
+
+                dryRunParts.add(part);
+            }
+            dryRun = true;
+            run = false;
+            return;
+        }
+
         // Enable forked execution of Jetty server
         if ("--exec".equals(arg))
         {
@@ -1202,42 +1255,60 @@ public class StartArgs
         }
 
         // Module Management
-        if ("--list-modules".equals(arg))
+        if ("--list-module".equals(arg) || "--list-modules".equals(arg))
         {
             listModules = Collections.singletonList("-internal");
             run = false;
             return;
         }
 
-        if (arg.startsWith("--list-modules="))
+        if (arg.startsWith("--list-module=") || arg.startsWith("--list-modules="))
         {
             listModules = Props.getValues(arg);
             run = false;
             return;
         }
 
+        // Module Management
+        if ("--show-module".equals(arg) || "--show-modules".equals(arg))
+        {
+            showModules = Collections.emptyList();
+            run = false;
+            return;
+        }
+
+        if (arg.startsWith("--show-module=") || arg.startsWith("--show-modules="))
+        {
+            showModules = Props.getValues(arg);
+            run = false;
+            return;
+        }
+
         // jetty.base build-out : add to ${jetty.base}/start.ini
-        if ("--create-startd".equals(arg))
+
+        if ("--create-start-ini".equals(arg))
         {
-            createStartd = true;
+            createStartIni = true;
             run = false;
             createFiles = true;
             licenseCheckRequired = true;
             return;
         }
-        if (arg.startsWith("--add-to-startd="))
+        if ("--create-startd".equals(arg) || "--create-start-d".equals(arg))
         {
-            String value = Props.getValue(arg);
-            StartLog.warn("--add-to-startd is deprecated! Instead use: --create-startd --add-to-start=%s", value);
-            createStartd = true;
-            startModules.addAll(Props.getValues(arg));
+            createStartD = true;
             run = false;
             createFiles = true;
             licenseCheckRequired = true;
             return;
         }
-        if (arg.startsWith("--add-to-start="))
+        if (arg.startsWith("--add-module=") || arg.startsWith("--add-modules=") || arg.startsWith("--add-to-start=") || arg.startsWith("--add-to-startd="))
         {
+            if (arg.startsWith("--add-to-start=") || arg.startsWith("--add-to-startd="))
+            {
+                String value = Props.getValue(arg);
+                StartLog.warn("Option " + arg.split("=")[0] + " is deprecated! Instead use: --add-module=%s", value);
+            }
             startModules.addAll(Props.getValues(arg));
             run = false;
             createFiles = true;
